# station_report

./: pyproject.toml
config/: settings.py  urls.py
static/css/: bootstrap.css
station_report/: admin.py  apps.py  forms.py  manage.py  models.py  urls.py  views.py
station_report/migrations/: 0001_initial.py  0002_alter_section_comment_alter_section_is_completed_and_more.py  0002_remove_sectiondate_comment_section_comment.py  0003_alter_section_section_name.py  0003_section_complate_date_section_start_work_date.py  0004_alter_sectiondate_issue_date_rd_and_more.py  0005_alter_sectiondate_issue_date_rd_and_more.py  0006_section_issue_date_rd_section_issue_date_sz_and_more.py
station_report/station_report/: asgi.py  settings.py  urls.py  wsgi.py
station_report/templates/station_report/: main.html  report.html  start_page.html  station_confirm_delete.html  station_create.html  station_form.html  test.html
station_report/templatetags/: __init__.py  custom_tags.py  tag_date_time.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: start_page.html
